--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT = 5000
 DB = mongodb+srv://vedantyetekar:hardhustler7@cluster1.mghjiwf.mongodb.net/?retryWrites=true&w=majority
 JWTPRIVATEKEY = test
+SALT = 10
